# wecl

./: .gitignore  CMakeLists.txt  README.md  build.sh  gclib.h
.cache/clangd/index/: gc_clock.c.0D060339B4014C93.idx  gc_clock.h.1EBBE0668A34D00D.idx  gc_utility.c.C836B11A2CD054C9.idx  gc_utility.h.E83E54765BAEBE17.idx
include/: gcAllocators.h  gcArray.h  gcClock.h  gcError.h  gcString.h  gcTimer.h  gc_clock.h  gc_defer.h  gc_error.h  gc_utility.h  gclib.h  weAllocators.h  weArray.h  weClock.h  weError.h  weLogging.h  weMemory.h  weString.h  weUtility.h  wecl.h
src/: CMakeLists.txt  gcClock.c  gcError.c  gcUtility.c  gc_clock.c  gc_error.c  gc_utility.c  weClock.c  weError.c  weLogging.c  weMemory.c  weUtility.c
tests/: CMakeLists.txt  clock.c  error.c  main.c  utility.c
